<resources>
    <string name="app_name">MatchoMate</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="start">START</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="signup">Signup</string>
    <string name="have_no_account_yet">Have no account yet?</string>
    <string name="next">Next</string>
    <string name="userType">User Type</string>
    <string name="trainer">Trainer</string>
    <string name="trainee">Trainee</string>
    <string name="nickname">Nickname:</string>
    <string name="workoutExperience">Workout Experience:</string>
    <string name="years">Years</string>
    <string name="age">Age:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="lbs">lbs</string>
    <string name="ft">ft</string>
    <string name="in">in</string>
    <string name="yourExerciseField">Your exercise field</string>
    <string name="gymLocation">Gym Location</string>
    <string name="chooseYourPhoto">Choose your photo</string>
    <string name="done">Done</string>
    <string name="signin">Signup</string>
    <string name="Bio">Bio:</string>
    <string name="login_error_message">Please make sure you enter an email address and password</string>
    <string name="login_error_title">Error</string>
    <string name="signup_error_message">Please make sure you enter email address and password</string>
    <string name="signup_error_title">Error</string>
    <string name="logout">Logout</string>
    <string name="match_string">Matching</string>
    <string name="name_string">- Name</string>
    <string name="gym_location_string">- Gym Location</string>
    <string name="exercise_field_string">- Exercise Field</string>
    <string name="workout_experience_string">- Workout Experience</string>
    <string name="match_image">match_image</string>
    <string name="item_name_string">- Item Name</string>
    <string name="description_string">- Description</string>
    <string name="number_of_points_string">15 Points</string>
    <string name="profile">Profile</string>
    <string name="match">Match</string>
    <string name="liked">Liked</string>
    <string name="reward">Reward</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gym_location">Gym Location:</string>
    <string name="exercise_field">Exercise Field</string>
    <string name="experience">Experience</string>
    <string name="no_name">No Name</string>
    <string name="bio">Bio</string>
    <string name="gender">Gender</string>
    <string name="chooseYourAvateor">Choose your avatar</string>
    <string name="pts">pts</string>
    <string name="protein_des">An essential macronutrient that helps build muscle, repair tissue, and make enzymes and hormones.</string>
    <string name="organic_protein_des">Non-GMO Vegan Protein powder made with a complete profile of all the essential amino acids along</string>
    <string name="eaa_des">Provides the specialized nutrients your body needs to repair existing muscle tissue and build new muscle tissue</string>
    <string name="bcaa_des">Taken in order to boost muscle growth and enhance exercise performance.</string>
    <string name="creatine_des">Helps your muscles produce energy during heavy lifting or high-intensity exercise</string>
    <string name="glutamine_des">important amino acid with many functions in the body building block of protein and critical part of the immune system</string>
    <string name="hmb_des">needed by the body to protect and repair muscle tissue</string>
    <string name="wrist_wrap_des">to provide support to the wrist joint during heavy or max effort lifts</string>
    <string name="training_tube_des">lightweight, portable and durable. Effective when used alone, or with handles and anchors.</string>
    <string name="lifting_belt_des">designed to help brace your lower back and core during strength training exercises like deadlifts and squats</string>
    <string name="energy_drink_des">An Energy Drink</string>
    <string name="ab_roller_des">Ab-Roller</string>
    <string name="push_up_bars_des">Push-Up Bars</string>
    <string name="mName">Name</string>
    <string name="mLocation">Location</string>
    <string name="mField">Field</string>
    <string name="mExperience">Exp\'</string>
</resources>
