<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/avatarView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/name"
        android:layout_width="157dp"
        android:layout_height="19dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="8dp"
        android:text="@string/name_string"
        app:layout_constraintStart_toEndOf="@+id/avatarView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gymLocation"
        android:layout_width="155dp"
        android:layout_height="20dp"
        android:layout_marginTop="7dp"
        android:text="@string/gym_location_string"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/exerciseField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/exercise_field_string"
        app:layout_constraintStart_toStartOf="@+id/gymLocation"
        app:layout_constraintTop_toBottomOf="@+id/gymLocation" />

    <TextView
        android:id="@+id/workoutExperience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/workout_experience_string"
        app:layout_constraintStart_toStartOf="@+id/exerciseField"
        app:layout_constraintTop_toBottomOf="@+id/exerciseField" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="39dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chat" />

    <TextView
        android:id="@+id/lName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/mName"
        app:layout_constraintStart_toEndOf="@+id/avatarView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/mLocation"
        app:layout_constraintStart_toStartOf="@+id/lName"
        app:layout_constraintTop_toBottomOf="@+id/lName" />

    <TextView
        android:id="@+id/lField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/mField"
        app:layout_constraintStart_toStartOf="@+id/lLocation"
        app:layout_constraintTop_toBottomOf="@+id/lLocation" />

    <TextView
        android:id="@+id/lExperience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/mExperience"
        app:layout_constraintStart_toStartOf="@+id/lField"
        app:layout_constraintTop_toBottomOf="@+id/lField" />

</androidx.constraintlayout.widget.ConstraintLayout>